<resources>

    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="action_remove_ads">Remove ads</string>
    <string name="action_settings">Settings</string>
    <string name="action_show_logs">Display logs</string>
    <string name="activity_logs_clear">Clear</string>
    <string name="activity_logs_refresh">Refresh</string>
    <string name="activity_logs_title">Logs</string>
    <string name="activity_server_editor_add_server">Add server</string>
    <string name="activity_server_editor_server_address">Server address</string>
    <string name="activity_server_editor_server_address_error">Please input the server\'s address</string>
    <string name="activity_server_editor_server_check_fail_threshold">Please input the number of consecutive fails before notification</string>
    <string name="activity_server_editor_server_check_interval">Check interval (minutes)</string>
    <string name="activity_server_editor_server_check_interval_error">Please input the server\'s check interval</string>
    <string name="activity_server_editor_server_check_number">Fails before notification</string>
    <string name="activity_server_editor_server_name">Server name</string>
    <string name="activity_server_editor_server_name_error">Please input the server\'s name</string>
    <string name="activity_server_editor_toast_add">Added server %1$s</string>
    <string name="activity_server_editor_toast_delete">Deleted server %1$s</string>
    <string name="activity_server_editor_toast_update">Updated server %1$s</string>
    <string name="activity_server_editor_update_server">Edit server</string>
    <string name="activity_server_list_check_now">Check now</string>
    <string name="activity_server_list_delete">Delete</string>
    <string name="activity_server_list_disable">Disable auto check</string>
    <string name="activity_server_list_edit">Edit</string>
    <string name="activity_server_list_empty_list">Empty list, please add a server</string>
    <string name="activity_server_list_enable">Enable auto check</string>
    <string name="activity_server_select_title">Select a server</string>
    <string name="app_name">Server Offline Notifier</string>
    <string name="banner_ad_unit_id">ca-app-pub-7910208847475730/1757332608</string>
    <string name="default_notifications_ringtone" />
    <string name="logs_depth_array0">Don\'t log</string>
    <string name="logs_depth_array1">1 hour</string>
    <string name="logs_depth_array12">12 hours</string>
    <string name="logs_depth_array120">5 days</string>
    <string name="logs_depth_array2">2 hours</string>
    <string name="logs_depth_array24">1 day</string>
    <string name="logs_depth_array240">10 days</string>
    <string name="logs_depth_array48">2 days</string>
    <string name="logs_depth_array72">3 days</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="receiver_server_check_failed1">%1$s is still offline after 1 try</string>
    <string name="receiver_server_check_failed2">%1$s is still offline after %2$d tries</string>
    <string name="receiver_server_check_log">%1$s (%2$s) is %3$s</string>
    <string name="receiver_server_check_log_offline">offline</string>
    <string name="receiver_server_check_log_online">online</string>
    <string name="settings_allow_roaming">Allow roaming connections</string>
    <string name="settings_category_general">General</string>
    <string name="settings_category_notifications">Notifications</string>
    <string name="settings_enable_notifications">Enable notifications</string>
    <string name="settings_logs_depth">Logs depth</string>
    <string name="settings_ringtone">Ringtone</string>
    <string name="settings_timeout">Connections timeout (seconds)</string>
    <string name="settings_vibrate">Vibrate</string>
    <string name="settings_widget_action">Action when a widget is clicked</string>
    <string name="title_activity_settings">Settings</string>
    <string name="widget_actions_array0">Open server list</string>
    <string name="widget_actions_array1">Launch a manual check</string>
    <string name="widget_unknown_server">Unknown\10server</string>
    <string name="accept">Accept</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
</resources>
